build/clang-plugin/Utils.h
@@ -346,8 +346,12 @@ inline bool isPlacementNew(const CXXNewExpr *Expression) {
 }
 
 inline bool inThirdPartyPath(SourceLocation Loc, const SourceManager &SM) {
-  SmallString<1024> FileName = SM.getFilename(Loc);
-  llvm::sys::fs::make_absolute(FileName);
+  Loc = SM.getFileLoc(Loc);
+
+  SmallString<1024> RawFileName = SM.getFilename(Loc);
+  llvm::sys::fs::make_absolute(RawFileName);
+  SmallString<1024> FileName;
+  llvm::sys::fs::real_path(RawFileName, FileName);
 
   for (uint32_t i = 0; i < MOZ_THIRD_PARTY_PATHS_COUNT; ++i) {
     auto PathB = sys::path::begin(FileName);
